fix(ui): grid display on mobile

--- a/sass/partials/_mixins.scss
+++ b/sass/partials/_mixins.scss
@@ -12,7 +12,15 @@
   &.as-list {
     grid-gap: 0.7em 1em;;
     align-content: start;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr))
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+
+    @media only screen and (max-width : 667px) {
+      display: block;
+      
+      > * + * {
+        margin-top: .7rem;
+      }
+    }
   }
 }
 
